<resources>
    <string name="app_name">Kitchen Stories</string>

    <string name="page_title">All recipes</string>
    <string name="filter">filter</string>
    <string name="content_description_filter">content_description_filter</string>
    <string name="title_activity_tabbed__all_recipes">Tabbed_All_recipes</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="content_description_media">content description media</string>

    <string name="dummy_content">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="more_delicious_things_for_you">MORE DELICIOUS THINGS FOR YOU</string>
    <string name="tags">TAGS</string>
    <string name="our_lastest_recipes">Our Lastest Recipes</string>
    <string name="see_all">SEE ALL</string>
    <string name="go_to_recipe">GO TO RECIPE</string>
    <string name="need_a_quick_fix">Need a Quick Fix</string>
    <string name="introducing_the_community_issue_sponsored_by_infarm">Introducing: The Community Issue - Sponsored by Infarm</string>
    <string name="make_easy_neapolitan_style_pizza_with_lisa">make easy Neapolitan - style pizza with Lisa</string>
    <string name="community">Community</string>
    <string name="our_favorite_vegan_recipes_from_you_the_community">Our Favorite Vegan Recipes from You, The Community</string>
    <string name="here_s_how_to_upload_your_own_recipes">Here\'s How to Upload Your Own Recipes</string>
    <string name="what_to_cook_this_week">What to Cook This Week</string>
    <string name="reviews">REVIEWS</string>
    <string name="utensils">UTENSILS</string>
    <string name="nutrition_per_serving">NUTRITION PER SERVING</string>
    <string name="make_this_today">Make This Today</string>
    <string name="done">Done</string>
    <string name="category">CATEGORY</string>
    <string name="diet">DIET</string>
    <string name="likes">Likes</string>
    <string name="relevance">Relevance</string>
    <string name="rating">Rating</string>
    <string name="calories">Calories</string>
    <string name="preparation_time">Preparation time</string>
    <string name="release_date">Release date</string>
    <string name="cuisine">CUISINE</string>
    <string name="vegetables">Vegetables</string>
    <string name="chicken">Chicken</string>
    <string name="title_activity_filter__recipe">Filter_Recipe</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- login -->
    <string name="facebook_app_id">531850061176574</string>
    <string name="fb_login_protocol_scheme">fb531850061176574</string>

    <string-array name="unit_ingre">
        <item></item>
        <item>g</item>
        <item>ml</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>bag</item>
        <item>capsule</item>
        <item>cl</item>
        <item>kg</item>
        <item>l</item>
        <item>leaf</item>
        <item>package</item>
        <item>tea bag</item>
    </string-array>
</resources>